--- a/notebooks/03_model_training.ipynb
+++ b/notebooks/03_model_training.ipynb
@@ -113,10 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8c18bd6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neural Network Validation Accuracy: 0.8763\n",
+      "Saved Neural Network model as mlp_multiclass.joblib\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -136,6 +145,143 @@
     "joblib.dump(nn_model, \"../models/mlp_multiclass.joblib\")\n",
     "print(\"Saved Neural Network model as mlp_multiclass.joblib\")\n",
     "#0.8763"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "355f8b23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-12-12 17:11:06,536] A new study created in memory with name: no-name-4338f6aa-cc5f-4017-a97c-3e1702b4ab35\n",
+      "/home/anuja/ml/smoker_status_prediction/venv/lib/python3.12/site-packages/optuna/distributions.py:502: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (50,) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "/home/anuja/ml/smoker_status_prediction/venv/lib/python3.12/site-packages/optuna/distributions.py:502: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (100,) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "/home/anuja/ml/smoker_status_prediction/venv/lib/python3.12/site-packages/optuna/distributions.py:502: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (100, 50) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "/home/anuja/ml/smoker_status_prediction/venv/lib/python3.12/site-packages/optuna/distributions.py:502: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (150, 100, 50) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "/home/anuja/ml/smoker_status_prediction/venv/lib/python3.12/site-packages/optuna/distributions.py:502: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (200, 100) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "/tmp/ipykernel_330347/3848924978.py:18: FutureWarning: suggest_loguniform has been deprecated in v3.0.0. This feature will be removed in v6.0.0. See https://github.com/optuna/optuna/releases/tag/v3.0.0. Use suggest_float(..., log=True) instead.\n",
+      "  learning_rate_init = trial.suggest_loguniform(\"learning_rate_init\", 1e-4, 1e-2)\n",
+      "/tmp/ipykernel_330347/3848924978.py:19: FutureWarning: suggest_loguniform has been deprecated in v3.0.0. This feature will be removed in v6.0.0. See https://github.com/optuna/optuna/releases/tag/v3.0.0. Use suggest_float(..., log=True) instead.\n",
+      "  alpha = trial.suggest_loguniform(\"alpha\", 1e-5, 1e-2)\n",
+      "[I 2025-12-12 18:10:22,071] Trial 0 finished with value: 0.9263585459886176 and parameters: {'hidden_layer_sizes': (200, 100), 'activation': 'relu', 'solver': 'adam', 'learning_rate_init': 0.0025986212005703682, 'alpha': 0.004727100327725838}. Best is trial 0 with value: 0.9263585459886176.\n",
+      "/home/anuja/ml/smoker_status_prediction/venv/lib/python3.12/site-packages/optuna/distributions.py:502: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (50,) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "/home/anuja/ml/smoker_status_prediction/venv/lib/python3.12/site-packages/optuna/distributions.py:502: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (100,) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "/home/anuja/ml/smoker_status_prediction/venv/lib/python3.12/site-packages/optuna/distributions.py:502: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (100, 50) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "/home/anuja/ml/smoker_status_prediction/venv/lib/python3.12/site-packages/optuna/distributions.py:502: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (150, 100, 50) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "/home/anuja/ml/smoker_status_prediction/venv/lib/python3.12/site-packages/optuna/distributions.py:502: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (200, 100) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "/tmp/ipykernel_330347/3848924978.py:18: FutureWarning: suggest_loguniform has been deprecated in v3.0.0. This feature will be removed in v6.0.0. See https://github.com/optuna/optuna/releases/tag/v3.0.0. Use suggest_float(..., log=True) instead.\n",
+      "  learning_rate_init = trial.suggest_loguniform(\"learning_rate_init\", 1e-4, 1e-2)\n",
+      "/tmp/ipykernel_330347/3848924978.py:19: FutureWarning: suggest_loguniform has been deprecated in v3.0.0. This feature will be removed in v6.0.0. See https://github.com/optuna/optuna/releases/tag/v3.0.0. Use suggest_float(..., log=True) instead.\n",
+      "  alpha = trial.suggest_loguniform(\"alpha\", 1e-5, 1e-2)\n",
+      "[I 2025-12-12 18:14:58,582] Trial 1 finished with value: 0.8242036901046448 and parameters: {'hidden_layer_sizes': (50,), 'activation': 'relu', 'solver': 'adam', 'learning_rate_init': 0.00016657330354312284, 'alpha': 0.003687938549565407}. Best is trial 0 with value: 0.9263585459886176.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Validation Accuracy: 0.9263585459886176\n",
+      "Best Hyperparameters: {'hidden_layer_sizes': (200, 100), 'activation': 'relu', 'solver': 'adam', 'learning_rate_init': 0.0025986212005703682, 'alpha': 0.004727100327725838}\n",
+      "Saved tuned Neural Network model as mpl_tuned_optuna.joblib\n"
+     ]
+    }
+   ],
+   "source": [
+    "import optuna\n",
+    "import joblib\n",
+    "import numpy as np\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# --------------------------------------------------------------------\n",
+    "# Objective: define what Optuna should optimize\n",
+    "# --------------------------------------------------------------------\n",
+    "def objective(trial):\n",
+    "    # 1) Hyperparameter search space\n",
+    "    hidden_layer_sizes = trial.suggest_categorical(\n",
+    "        \"hidden_layer_sizes\",\n",
+    "        [(50,), (100,), (100, 50), (150, 100, 50), (200, 100)]\n",
+    "    )\n",
+    "    activation = trial.suggest_categorical(\"activation\", [\"relu\", \"tanh\"])\n",
+    "    solver = trial.suggest_categorical(\"solver\", [\"adam\", \"sgd\"])\n",
+    "    learning_rate_init = trial.suggest_loguniform(\"learning_rate_init\", 1e-4, 1e-2)\n",
+    "    alpha = trial.suggest_loguniform(\"alpha\", 1e-5, 1e-2)\n",
+    "\n",
+    "    # 2) Create model with trial config\n",
+    "    model = MLPClassifier(\n",
+    "        hidden_layer_sizes=hidden_layer_sizes,\n",
+    "        activation=activation,\n",
+    "        solver=solver,\n",
+    "        learning_rate_init=learning_rate_init,\n",
+    "        alpha=alpha,\n",
+    "        max_iter=400,               # max epochs\n",
+    "        random_state=42,\n",
+    "        early_stopping=True,         # stop early if no improvement\n",
+    "        n_iter_no_change=20,\n",
+    "        verbose=False\n",
+    "    )\n",
+    "\n",
+    "    # 3) Train\n",
+    "    model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "    # 4) Validate\n",
+    "    val_pred = model.predict(X_val_scaled)\n",
+    "    val_acc = accuracy_score(y_val, val_pred)\n",
+    "\n",
+    "    return val_acc\n",
+    "\n",
+    "# --------------------------------------------------------------------\n",
+    "# Run Optuna Study\n",
+    "# --------------------------------------------------------------------\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(\n",
+    "    objective,\n",
+    "    n_trials=30,       # adjust based on time/budget\n",
+    "    timeout=3600       # seconds (optional: end after ~1 hour)\n",
+    ")\n",
+    "\n",
+    "print(\"Best Validation Accuracy:\", study.best_value)\n",
+    "print(\"Best Hyperparameters:\", study.best_params)\n",
+    "\n",
+    "# --------------------------------------------------------------------\n",
+    "# Train the Best Model on Full Train + Validation Combined (Optional)\n",
+    "# --------------------------------------------------------------------\n",
+    "best_params = study.best_params\n",
+    "\n",
+    "best_nn_model = MLPClassifier(\n",
+    "    hidden_layer_sizes=best_params[\"hidden_layer_sizes\"],\n",
+    "    activation=best_params[\"activation\"],\n",
+    "    solver=best_params[\"solver\"],\n",
+    "    learning_rate_init=best_params[\"learning_rate_init\"],\n",
+    "    alpha=best_params[\"alpha\"],\n",
+    "    max_iter=500,\n",
+    "    random_state=42,\n",
+    "    early_stopping=True,\n",
+    "    n_iter_no_change=20\n",
+    ")\n",
+    "\n",
+    "# Fit final tuned model\n",
+    "best_nn_model.fit(np.vstack((X_train_scaled, X_val_scaled)),\n",
+    "                  np.hstack((y_train, y_val)))\n",
+    "\n",
+    "# Save final model\n",
+    "joblib.dump(best_nn_model, \"../models/mpl_tuned_optuna.joblib\")\n",
+    "\n",
+    "print(\"Saved tuned Neural Network model as mpl_tuned_optuna.joblib\")\n"
    ]
   },
   {
@@ -193,9 +339,15 @@
     "print(\"Best CV accuracy:\", searcher.best_score_)\n",
     "\n",
     "# Evaluate accuracy on the test set\n",
-    "test_accuracy = searcher.score(X_test, y_test)\n",
+    "test_accuracy = searcher.score(X_val_scaled, y_val)\n",
     "\n",
-    "print(\"Test accuracy of best grid search hypers:\", test_accuracy)\n"
+    "print(\"Test accuracy of best grid search hypers:\", test_accuracy)\n",
+    "\n",
+    "==============================\n",
+    "       TUNING COMPLETE       \n",
+    "==============================\n",
+    "Best Accuracy: 0.8258\n",
+    "Best Hyperparameters: {'kernel': 'rbf', 'C': 91.05814801432525, 'gamma': 'auto'}\n"
    ]
   }
  ],
